--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -26,6 +26,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${rootProject.ext.SUPPORT_VERSION}"
+    compile 'com.race604.flyrefresh:library:2.0.0'
 }
 
 if (android.publishNonDefault) {
