--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${rootProject.ext.SUPPORT_VERSION}"
     compile 'com.race604.flyrefresh:library:2.0.0'
+    compile 'com.orhanobut:logger:1.15'
 }
 
 if (android.publishNonDefault) {
