--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+#keystore
+RELEASE_STORE_FILE=../keystore.jks
+RELEASE_STORE_PASSWORD=xhzxzq15
+RELEASE_KEY_ALIAS=dansejijie
+RELEASE_KEY_PASSWORD=xhzxzq15
