--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
             signingConfig signingConfigs.release
         }
 
+        debug {
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+
     }
 
     sourceSets{
@@ -69,5 +74,6 @@ dependencies {
     compile project(':utils')
     compile project(':widget')
     compile ("com.android.support:recyclerview-v7:23.4.0")
+    compile 'com.facebook.fresco:fresco:1.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 }
