--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':widget', ':library', ':mylibrary', ':utils', ':chatdemoui3.0', 'uikit', 'nimlib'
+include ':widget', ':library', ':mylibrary', ':utils', ':chatdemoui3.0', ':mylibrary2', 'uikit', 'nimlib'
