--- a/chatdemoui3.0/src/main/AndroidManifest.xml
+++ b/chatdemoui3.0/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@ package="com.hyphenate.chatuidemo"
 <uses-permission android:name="com.hyphenate.chatuidemo.permission.MIPUSH_RECEIVE" />
 
 <application
-    android:name=".DemoApplication"
+    android:name=".MainApplication"
     android:allowBackup="true"
     android:icon="@drawable/nim_music_icon_play"
     android:label="@string/app_name"
